make sure background image covers entire monitor regardless the size of monitor

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -12,14 +12,15 @@ body,html{
 	box-sizing: border-box; 
 }
 
-/*Background image used*/
+/*Background image used, make image center and cover the entire monitor*/
 .bg-img {
 	background-image: url("/images/color_apple.jpg");
-	min-height: 760px;  /*height of image*/
+	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
-	background-size: cover;
+	background-attachment: fixed;
 	position: relative;
+	height: 100%
 }
 
 /*form container, style and place in center*/
